@@ -19,6 +19,12 @@ struct devsdk_protocols
   struct devsdk_protocols *next;
 };
 
+typedef struct
+{
+  uint64_t deadline;
+  unsigned interval;
+} devsdk_timeout;
+
 extern bool devsdk_protocols_equal (const devsdk_protocols *p1, const devsdk_protocols *p2);
 
 extern bool edgex_device_autoevents_equal (const edgex_device_autoevents *e1, const edgex_device_autoevents *e2);
@@ -26,5 +32,9 @@ extern bool edgex_device_autoevents_equal (const edgex_device_autoevents *e1, co
 extern void devsdk_free_resources (devsdk_device_resources *r);
 
 extern uint64_t edgex_parsetime (const char *spec);
+
+extern void devsdk_wait_msecs (uint64_t duration);
+
+extern unsigned long devsdk_strtoul_dfl (const char *val, unsigned long dfl);
 
 #endif
